--- a/src/main/java/com/dio/br/springbootweb/pom.xml
+++ b/src/main/java/com/dio/br/springbootweb/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.6.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.dio.swapi</groupId>
-	<artifactId>estrela</artifactId>
+	<groupId>com.exemplodeprojeto.dio</groupId>
+	<artifactId>springbootweb</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>estrela</name>
-	<description>Consumindo API do Star Wars</description>
+	<name>springbootweb</name>
+	<description>Exemplo de projeto Spring Boot Initializr</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
@@ -21,33 +21,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-			<version>2.6.3</version>
-		</dependency>
-		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.microsoft.sqlserver</groupId>
-			<artifactId>mssql-jdbc</artifactId>
-			<scope>runtime</scope>
-		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<version>1.18.22</version>
-			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
